--- a/CO2/FacebookLogin/app/src/main/res/layout/activity_main2.xml
+++ b/CO2/FacebookLogin/app/src/main/res/layout/activity_main2.xml
@@ -1,9 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".MainActivity2">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/logo_image"
+        android:layout_width="146dp"
+        android:layout_height="146dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="169dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="400dp"
+        android:src="@drawable/img" />
+
+    <TextView
+        android:id="@+id/username_textview"
+        android:layout_width="143dp"
+        android:layout_height="41dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="434dp"
+        android:layout_marginBottom="240dp"
+        android:fontFamily="monospace"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="235dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="343dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="303dp"
+        android:drawableTint="@color/facebookBlue"
+        android:gravity="center"
+        android:text="Welcome Back"
+        android:textColor="@color/facebookBlue"
+        android:textSize="30dp" />
+
+</RelativeLayout>
