--- a/CO4/Spinner/app/src/main/res/layout/activity_drama_movie.xml
+++ b/CO4/Spinner/app/src/main/res/layout/activity_drama_movie.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".DramaMovieActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/image1"
-        tools:layout_editor_absoluteY="0dp"
-        android:scaleType="centerCrop"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/drama" />
 </androidx.constraintlayout.widget.ConstraintLayout>
