--- a/CO4/Spinner/app/src/main/res/layout/activity_main.xml
+++ b/CO4/Spinner/app/src/main/res/layout/activity_main.xml
@@ -4,38 +4,56 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    android:background="#FFFFFF"
+    android:gravity="center">
 
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name" />
+            android:hint="Name"
+            android:textColorHint="#808080"
+            android:textColor="#000000"
+            android:padding="8dp"
+            android:layout_marginTop="16dp" />
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email" />
+            android:hint="Email"
+            android:textColorHint="#808080"
+            android:textColor="#000000"
+            android:padding="8dp"
+            android:layout_marginTop="16dp" />
 
         <EditText
             android:id="@+id/editTextDateOfBirth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Date of Birth" />
+            android:hint="Date of Birth"
+            android:textColorHint="#808080"
+            android:textColor="#000000"
+            android:padding="8dp"
+            android:layout_marginTop="16dp" />
 
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:padding="8dp"
+            android:layout_marginTop="16dp" />
 
         <Button
             android:id="@+id/buttonSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text="Submit"
-            android:onClick="submitForm" />
+            android:textColor="#FFFFFF"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:layout_marginTop="16dp" />
 
 </LinearLayout>
