--- a/CO3/OptionsMenu/app/src/main/res/layout/activity_main1.xml
+++ b/CO3/OptionsMenu/app/src/main/res/layout/activity_main1.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity3">
+    tools:context=".MainActivity1">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Profile"
+        android:text="About"
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="#C10909"
         android:textStyle="bold"
         android:textSize="24sp"/>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
